@@ -1,1 +1,1 @@
-GMetrics 0.4
+0.4
